src/impera/parser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> top_stmt main
Rule 2     main -> top_stmt
Rule 3     top_stmt -> mls
Rule 4     top_stmt -> entity_def
Rule 5     top_stmt -> implement_def
Rule 6     top_stmt -> implementation_def
Rule 7     top_stmt -> relation
Rule 8     top_stmt -> statement
Rule 9     top_stmt -> typedef
Rule 10    top_stmt -> index
Rule 11    statement -> assign
Rule 12    statement -> constructor
Rule 13    statement -> function_call
Rule 14    statement -> for
Rule 15    stmt_list -> statement stmt_list
Rule 16    stmt_list -> statement
Rule 17    assign -> var_ref = operand
Rule 18    for -> FOR ID IN operand implementation
Rule 19    entity_def -> ENTITY CID : entity_body_outer
Rule 20    entity_def -> ENTITY CID EXTENDS class_ref_list : entity_body_outer
Rule 21    entity_body_outer -> mls entity_body END
Rule 22    entity_body_outer -> entity_body END
Rule 23    entity_body_outer -> END
Rule 24    entity_body_outer -> mls END
Rule 25    entity_body -> entity_body attr
Rule 26    entity_body -> attr
Rule 27    attr -> ns_ref ID
Rule 28    attr -> ns_ref ID = constant
Rule 29    implement_def -> IMPLEMENT class_ref USING ns_list
Rule 30    implement_def -> IMPLEMENT class_ref USING ns_list WHEN condition
Rule 31    implementation_def -> IMPLEMENTATION ID FOR class_ref implementation
Rule 32    implementation_def -> IMPLEMENTATION ID implementation
Rule 33    implementation -> : mls stmt_list END
Rule 34    implementation -> : stmt_list END
Rule 35    implementation -> : END
Rule 36    relation -> class_ref ID multi REL multi class_ref ID
Rule 37    multi -> [ INT ]
Rule 38    multi -> [ INT : ]
Rule 39    multi -> [ INT : INT ]
Rule 40    multi -> [ : INT ]
Rule 41    typedef -> TYPEDEF ID AS ns_ref MATCHING REGEX
Rule 42    typedef -> TYPEDEF ID AS ns_ref MATCHING condition
Rule 43    typedef -> TYPEDEF CID AS constructor
Rule 44    index -> INDEX class_ref ( id_list )
Rule 45    condition -> ( condition )
Rule 46    condition -> operand CMP_OP operand
Rule 47    condition -> operand IN list_def
Rule 48    condition -> operand IN var_ref
Rule 49    condition -> condition AND condition
Rule 50    condition -> condition OR condition
Rule 51    condition -> function_call
Rule 52    condition -> NOT condition
Rule 53    condition -> TRUE
Rule 54    condition -> FALSE
Rule 55    operand -> constant
Rule 56    operand -> function_call
Rule 57    operand -> constructor
Rule 58    operand -> list_def
Rule 59    operand -> var_ref
Rule 60    operand -> index_lookup
Rule 61    constructor -> class_ref ( param_list )
Rule 62    constructor -> class_ref ( )
Rule 63    function_call -> ns_ref ( )
Rule 64    function_call -> ns_ref ( operand_list )
Rule 65    list_def -> [ operand_list ]
Rule 66    index_lookup -> class_ref [ param_list ]
Rule 67    constant -> TRUE
Rule 68    constant -> FALSE
Rule 69    constant -> INT
Rule 70    constant -> FLOAT
Rule 71    constant -> mls
Rule 72    constant -> REGEX
Rule 73    constant -> STRING
Rule 74    param_list -> ID = operand , param_list
Rule 75    param_list -> ID = operand
Rule 76    operand_list -> operand , operand_list
Rule 77    operand_list -> operand
Rule 78    ns_list -> ns_ref , ns_list
Rule 79    ns_list -> ns_ref
Rule 80    var_ref -> var_ref . ID
Rule 81    var_ref -> ns_ref
Rule 82    class_ref -> CID
Rule 83    class_ref -> ns_ref SEP CID
Rule 84    class_ref_list -> class_ref , class_ref_list
Rule 85    class_ref_list -> class_ref
Rule 86    ns_ref -> ns_ref SEP ID
Rule 87    ns_ref -> ID
Rule 88    id_list -> ID , id_list
Rule 89    id_list -> ID
Rule 90    mls -> MLS
Rule 91    mls -> MLS mls

Terminals, with rules where they appear

(                    : 44 45 61 62 63 64
)                    : 44 45 61 62 63 64
,                    : 74 76 78 84 88
.                    : 80
:                    : 19 20 33 34 35 38 39 40
=                    : 17 28 74 75
AND                  : 49
AS                   : 41 42 43
CID                  : 19 20 43 82 83
CMP_OP               : 46
END                  : 21 22 23 24 33 34 35
ENTITY               : 19 20
EXTENDS              : 20
FALSE                : 54 68
FLOAT                : 70
FOR                  : 18 31
ID                   : 18 27 28 31 32 36 36 41 42 74 75 80 86 87 88 89
IMPLEMENT            : 29 30
IMPLEMENTATION       : 31 32
IN                   : 18 47 48
INDEX                : 44
INT                  : 37 38 39 39 40 69
MATCHING             : 41 42
MLS                  : 90 91
NOT                  : 52
OR                   : 50
REGEX                : 41 72
REL                  : 36
SEP                  : 83 86
STRING               : 73
TRUE                 : 53 67
TYPEDEF              : 41 42 43
USING                : 29 30
WHEN                 : 30
[                    : 37 38 39 40 65 66
]                    : 37 38 39 40 65 66
error                : 

Nonterminals, with rules where they appear

assign               : 11
attr                 : 25 26
class_ref            : 29 30 31 36 36 44 61 62 66 84 85
class_ref_list       : 20 84
condition            : 30 42 45 49 49 50 50 52
constant             : 28 55
constructor          : 12 43 57
entity_body          : 21 22 25
entity_body_outer    : 19 20
entity_def           : 4
for                  : 14
function_call        : 13 51 56
id_list              : 44 88
implement_def        : 5
implementation       : 18 31 32
implementation_def   : 6
index                : 10
index_lookup         : 60
list_def             : 47 58
main                 : 1 0
mls                  : 3 21 24 33 71 91
multi                : 36 36
ns_list              : 29 30 78
ns_ref               : 27 28 41 42 63 64 78 79 81 83 86
operand              : 17 18 46 46 47 48 74 75 76 77
operand_list         : 64 65 76
param_list           : 61 66 74
relation             : 7
statement            : 8 15 16
stmt_list            : 15 33 34
top_stmt             : 1 2
typedef              : 9
var_ref              : 17 48 59 80

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . top_stmt main
    (2) main -> . top_stmt
    (3) top_stmt -> . mls
    (4) top_stmt -> . entity_def
    (5) top_stmt -> . implement_def
    (6) top_stmt -> . implementation_def
    (7) top_stmt -> . relation
    (8) top_stmt -> . statement
    (9) top_stmt -> . typedef
    (10) top_stmt -> . index
    (90) mls -> . MLS
    (91) mls -> . MLS mls
    (19) entity_def -> . ENTITY CID : entity_body_outer
    (20) entity_def -> . ENTITY CID EXTENDS class_ref_list : entity_body_outer
    (29) implement_def -> . IMPLEMENT class_ref USING ns_list
    (30) implement_def -> . IMPLEMENT class_ref USING ns_list WHEN condition
    (31) implementation_def -> . IMPLEMENTATION ID FOR class_ref implementation
    (32) implementation_def -> . IMPLEMENTATION ID implementation
    (36) relation -> . class_ref ID multi REL multi class_ref ID
    (11) statement -> . assign
    (12) statement -> . constructor
    (13) statement -> . function_call
    (14) statement -> . for
    (41) typedef -> . TYPEDEF ID AS ns_ref MATCHING REGEX
    (42) typedef -> . TYPEDEF ID AS ns_ref MATCHING condition
    (43) typedef -> . TYPEDEF CID AS constructor
    (44) index -> . INDEX class_ref ( id_list )
    (82) class_ref -> . CID
    (83) class_ref -> . ns_ref SEP CID
    (17) assign -> . var_ref = operand
    (61) constructor -> . class_ref ( param_list )
    (62) constructor -> . class_ref ( )
    (63) function_call -> . ns_ref ( )
    (64) function_call -> . ns_ref ( operand_list )
    (18) for -> . FOR ID IN operand implementation
    (86) ns_ref -> . ns_ref SEP ID
    (87) ns_ref -> . ID
    (80) var_ref -> . var_ref . ID
    (81) var_ref -> . ns_ref

    MLS             shift and go to state 9
    ENTITY          shift and go to state 10
    IMPLEMENT       shift and go to state 13
    IMPLEMENTATION  shift and go to state 11
    TYPEDEF         shift and go to state 4
    INDEX           shift and go to state 26
    CID             shift and go to state 3
    FOR             shift and go to state 25
    ID              shift and go to state 20

    main                           shift and go to state 14
    implement_def                  shift and go to state 15
    top_stmt                       shift and go to state 1
    mls                            shift and go to state 2
    assign                         shift and go to state 18
    implementation_def             shift and go to state 17
    function_call                  shift and go to state 21
    constructor                    shift and go to state 22
    statement                      shift and go to state 23
    for                            shift and go to state 5
    var_ref                        shift and go to state 16
    typedef                        shift and go to state 6
    index                          shift and go to state 7
    ns_ref                         shift and go to state 24
    entity_def                     shift and go to state 8
    relation                       shift and go to state 12
    class_ref                      shift and go to state 19

state 1

    (1) main -> top_stmt . main
    (2) main -> top_stmt .
    (1) main -> . top_stmt main
    (2) main -> . top_stmt
    (3) top_stmt -> . mls
    (4) top_stmt -> . entity_def
    (5) top_stmt -> . implement_def
    (6) top_stmt -> . implementation_def
    (7) top_stmt -> . relation
    (8) top_stmt -> . statement
    (9) top_stmt -> . typedef
    (10) top_stmt -> . index
    (90) mls -> . MLS
    (91) mls -> . MLS mls
    (19) entity_def -> . ENTITY CID : entity_body_outer
    (20) entity_def -> . ENTITY CID EXTENDS class_ref_list : entity_body_outer
    (29) implement_def -> . IMPLEMENT class_ref USING ns_list
    (30) implement_def -> . IMPLEMENT class_ref USING ns_list WHEN condition
    (31) implementation_def -> . IMPLEMENTATION ID FOR class_ref implementation
    (32) implementation_def -> . IMPLEMENTATION ID implementation
    (36) relation -> . class_ref ID multi REL multi class_ref ID
    (11) statement -> . assign
    (12) statement -> . constructor
    (13) statement -> . function_call
    (14) statement -> . for
    (41) typedef -> . TYPEDEF ID AS ns_ref MATCHING REGEX
    (42) typedef -> . TYPEDEF ID AS ns_ref MATCHING condition
    (43) typedef -> . TYPEDEF CID AS constructor
    (44) index -> . INDEX class_ref ( id_list )
    (82) class_ref -> . CID
    (83) class_ref -> . ns_ref SEP CID
    (17) assign -> . var_ref = operand
    (61) constructor -> . class_ref ( param_list )
    (62) constructor -> . class_ref ( )
    (63) function_call -> . ns_ref ( )
    (64) function_call -> . ns_ref ( operand_list )
    (18) for -> . FOR ID IN operand implementation
    (86) ns_ref -> . ns_ref SEP ID
    (87) ns_ref -> . ID
    (80) var_ref -> . var_ref . ID
    (81) var_ref -> . ns_ref

    $end            reduce using rule 2 (main -> top_stmt .)
    MLS             shift and go to state 9
    ENTITY          shift and go to state 10
    IMPLEMENT       shift and go to state 13
    IMPLEMENTATION  shift and go to state 11
    TYPEDEF         shift and go to state 4
    INDEX           shift and go to state 26
    CID             shift and go to state 3
    FOR             shift and go to state 25
    ID              shift and go to state 20

    main                           shift and go to state 27
    implement_def                  shift and go to state 15
    top_stmt                       shift and go to state 1
    mls                            shift and go to state 2
    assign                         shift and go to state 18
    implementation_def             shift and go to state 17
    function_call                  shift and go to state 21
    constructor                    shift and go to state 22
    statement                      shift and go to state 23
    for                            shift and go to state 5
    var_ref                        shift and go to state 16
    typedef                        shift and go to state 6
    index                          shift and go to state 7
    ns_ref                         shift and go to state 24
    entity_def                     shift and go to state 8
    relation                       shift and go to state 12
    class_ref                      shift and go to state 19

state 2

    (3) top_stmt -> mls .

    MLS             reduce using rule 3 (top_stmt -> mls .)
    ENTITY          reduce using rule 3 (top_stmt -> mls .)
    IMPLEMENT       reduce using rule 3 (top_stmt -> mls .)
    IMPLEMENTATION  reduce using rule 3 (top_stmt -> mls .)
    TYPEDEF         reduce using rule 3 (top_stmt -> mls .)
    INDEX           reduce using rule 3 (top_stmt -> mls .)
    CID             reduce using rule 3 (top_stmt -> mls .)
    FOR             reduce using rule 3 (top_stmt -> mls .)
    ID              reduce using rule 3 (top_stmt -> mls .)
    $end            reduce using rule 3 (top_stmt -> mls .)


state 3

    (82) class_ref -> CID .

    ,               reduce using rule 82 (class_ref -> CID .)
    :               reduce using rule 82 (class_ref -> CID .)
    (               reduce using rule 82 (class_ref -> CID .)
    [               reduce using rule 82 (class_ref -> CID .)
    USING           reduce using rule 82 (class_ref -> CID .)
    ID              reduce using rule 82 (class_ref -> CID .)


state 4

    (41) typedef -> TYPEDEF . ID AS ns_ref MATCHING REGEX
    (42) typedef -> TYPEDEF . ID AS ns_ref MATCHING condition
    (43) typedef -> TYPEDEF . CID AS constructor

    ID              shift and go to state 29
    CID             shift and go to state 28


state 5

    (14) statement -> for .

    FOR             reduce using rule 14 (statement -> for .)
    CID             reduce using rule 14 (statement -> for .)
    ID              reduce using rule 14 (statement -> for .)
    END             reduce using rule 14 (statement -> for .)
    MLS             reduce using rule 14 (statement -> for .)
    ENTITY          reduce using rule 14 (statement -> for .)
    IMPLEMENT       reduce using rule 14 (statement -> for .)
    IMPLEMENTATION  reduce using rule 14 (statement -> for .)
    TYPEDEF         reduce using rule 14 (statement -> for .)
    INDEX           reduce using rule 14 (statement -> for .)
    $end            reduce using rule 14 (statement -> for .)


state 6

    (9) top_stmt -> typedef .

    MLS             reduce using rule 9 (top_stmt -> typedef .)
    ENTITY          reduce using rule 9 (top_stmt -> typedef .)
    IMPLEMENT       reduce using rule 9 (top_stmt -> typedef .)
    IMPLEMENTATION  reduce using rule 9 (top_stmt -> typedef .)
    TYPEDEF         reduce using rule 9 (top_stmt -> typedef .)
    INDEX           reduce using rule 9 (top_stmt -> typedef .)
    CID             reduce using rule 9 (top_stmt -> typedef .)
    FOR             reduce using rule 9 (top_stmt -> typedef .)
    ID              reduce using rule 9 (top_stmt -> typedef .)
    $end            reduce using rule 9 (top_stmt -> typedef .)


state 7

    (10) top_stmt -> index .

    MLS             reduce using rule 10 (top_stmt -> index .)
    ENTITY          reduce using rule 10 (top_stmt -> index .)
    IMPLEMENT       reduce using rule 10 (top_stmt -> index .)
    IMPLEMENTATION  reduce using rule 10 (top_stmt -> index .)
    TYPEDEF         reduce using rule 10 (top_stmt -> index .)
    INDEX           reduce using rule 10 (top_stmt -> index .)
    CID             reduce using rule 10 (top_stmt -> index .)
    FOR             reduce using rule 10 (top_stmt -> index .)
    ID              reduce using rule 10 (top_stmt -> index .)
    $end            reduce using rule 10 (top_stmt -> index .)


state 8

    (4) top_stmt -> entity_def .

    MLS             reduce using rule 4 (top_stmt -> entity_def .)
    ENTITY          reduce using rule 4 (top_stmt -> entity_def .)
    IMPLEMENT       reduce using rule 4 (top_stmt -> entity_def .)
    IMPLEMENTATION  reduce using rule 4 (top_stmt -> entity_def .)
    TYPEDEF         reduce using rule 4 (top_stmt -> entity_def .)
    INDEX           reduce using rule 4 (top_stmt -> entity_def .)
    CID             reduce using rule 4 (top_stmt -> entity_def .)
    FOR             reduce using rule 4 (top_stmt -> entity_def .)
    ID              reduce using rule 4 (top_stmt -> entity_def .)
    $end            reduce using rule 4 (top_stmt -> entity_def .)


state 9

    (90) mls -> MLS .
    (91) mls -> MLS . mls
    (90) mls -> . MLS
    (91) mls -> . MLS mls

  ! shift/reduce conflict for MLS resolved as shift
    FOR             reduce using rule 90 (mls -> MLS .)
    CID             reduce using rule 90 (mls -> MLS .)
    ID              reduce using rule 90 (mls -> MLS .)
    :               reduce using rule 90 (mls -> MLS .)
    ENTITY          reduce using rule 90 (mls -> MLS .)
    IMPLEMENT       reduce using rule 90 (mls -> MLS .)
    IMPLEMENTATION  reduce using rule 90 (mls -> MLS .)
    TYPEDEF         reduce using rule 90 (mls -> MLS .)
    INDEX           reduce using rule 90 (mls -> MLS .)
    $end            reduce using rule 90 (mls -> MLS .)
    ,               reduce using rule 90 (mls -> MLS .)
    )               reduce using rule 90 (mls -> MLS .)
    ]               reduce using rule 90 (mls -> MLS .)
    AND             reduce using rule 90 (mls -> MLS .)
    OR              reduce using rule 90 (mls -> MLS .)
    CMP_OP          reduce using rule 90 (mls -> MLS .)
    IN              reduce using rule 90 (mls -> MLS .)
    END             reduce using rule 90 (mls -> MLS .)
    MLS             shift and go to state 9

  ! MLS             [ reduce using rule 90 (mls -> MLS .) ]

    mls                            shift and go to state 30

state 10

    (19) entity_def -> ENTITY . CID : entity_body_outer
    (20) entity_def -> ENTITY . CID EXTENDS class_ref_list : entity_body_outer

    CID             shift and go to state 31


state 11

    (31) implementation_def -> IMPLEMENTATION . ID FOR class_ref implementation
    (32) implementation_def -> IMPLEMENTATION . ID implementation

    ID              shift and go to state 32


state 12

    (7) top_stmt -> relation .

    MLS             reduce using rule 7 (top_stmt -> relation .)
    ENTITY          reduce using rule 7 (top_stmt -> relation .)
    IMPLEMENT       reduce using rule 7 (top_stmt -> relation .)
    IMPLEMENTATION  reduce using rule 7 (top_stmt -> relation .)
    TYPEDEF         reduce using rule 7 (top_stmt -> relation .)
    INDEX           reduce using rule 7 (top_stmt -> relation .)
    CID             reduce using rule 7 (top_stmt -> relation .)
    FOR             reduce using rule 7 (top_stmt -> relation .)
    ID              reduce using rule 7 (top_stmt -> relation .)
    $end            reduce using rule 7 (top_stmt -> relation .)


state 13

    (29) implement_def -> IMPLEMENT . class_ref USING ns_list
    (30) implement_def -> IMPLEMENT . class_ref USING ns_list WHEN condition
    (82) class_ref -> . CID
    (83) class_ref -> . ns_ref SEP CID
    (86) ns_ref -> . ns_ref SEP ID
    (87) ns_ref -> . ID

    CID             shift and go to state 3
    ID              shift and go to state 20

    class_ref                      shift and go to state 33
    ns_ref                         shift and go to state 34

state 14

    (0) S' -> main .



state 15

    (5) top_stmt -> implement_def .

    MLS             reduce using rule 5 (top_stmt -> implement_def .)
    ENTITY          reduce using rule 5 (top_stmt -> implement_def .)
    IMPLEMENT       reduce using rule 5 (top_stmt -> implement_def .)
    IMPLEMENTATION  reduce using rule 5 (top_stmt -> implement_def .)
    TYPEDEF         reduce using rule 5 (top_stmt -> implement_def .)
    INDEX           reduce using rule 5 (top_stmt -> implement_def .)
    CID             reduce using rule 5 (top_stmt -> implement_def .)
    FOR             reduce using rule 5 (top_stmt -> implement_def .)
    ID              reduce using rule 5 (top_stmt -> implement_def .)
    $end            reduce using rule 5 (top_stmt -> implement_def .)


state 16

    (17) assign -> var_ref . = operand
    (80) var_ref -> var_ref . . ID

    =               shift and go to state 35
    .               shift and go to state 36


state 17

    (6) top_stmt -> implementation_def .

    MLS             reduce using rule 6 (top_stmt -> implementation_def .)
    ENTITY          reduce using rule 6 (top_stmt -> implementation_def .)
    IMPLEMENT       reduce using rule 6 (top_stmt -> implementation_def .)
    IMPLEMENTATION  reduce using rule 6 (top_stmt -> implementation_def .)
    TYPEDEF         reduce using rule 6 (top_stmt -> implementation_def .)
    INDEX           reduce using rule 6 (top_stmt -> implementation_def .)
    CID             reduce using rule 6 (top_stmt -> implementation_def .)
    FOR             reduce using rule 6 (top_stmt -> implementation_def .)
    ID              reduce using rule 6 (top_stmt -> implementation_def .)
    $end            reduce using rule 6 (top_stmt -> implementation_def .)


state 18

    (11) statement -> assign .

    FOR             reduce using rule 11 (statement -> assign .)
    CID             reduce using rule 11 (statement -> assign .)
    ID              reduce using rule 11 (statement -> assign .)
    END             reduce using rule 11 (statement -> assign .)
    MLS             reduce using rule 11 (statement -> assign .)
    ENTITY          reduce using rule 11 (statement -> assign .)
    IMPLEMENT       reduce using rule 11 (statement -> assign .)
    IMPLEMENTATION  reduce using rule 11 (statement -> assign .)
    TYPEDEF         reduce using rule 11 (statement -> assign .)
    INDEX           reduce using rule 11 (statement -> assign .)
    $end            reduce using rule 11 (statement -> assign .)


state 19

    (36) relation -> class_ref . ID multi REL multi class_ref ID
    (61) constructor -> class_ref . ( param_list )
    (62) constructor -> class_ref . ( )

    ID              shift and go to state 38
    (               shift and go to state 37


state 20
